# opc

./: .gitignore  Cargo.toml  Readme.md  build.rs
src/: gbda_aut.tlb  gbdaaut.rs  lib.rs  main.rs
src/opc/: mod.rs
src/opc/backend/: browser.rs  com.rs  mod.rs  server.rs
src/opc/backend/com/: browser.rs  groups.rs  items.rs  mod.rs  server.rs
tests/: opc_server_test.rs
