[package]
name = "opc"
version = "0.1.0"
authors = ["Tobias Krause <tobias.krause@codedsoft.com>"]
publish = false

[dependencies]
winapi = { version = "0.3.7", features = ["objbase", "oleauto", "winerror", "shobjidl", "oaidl"] }
winrt = { version = "0.5.0" }
oaidl = { version = "0.2.1" }
widestring = { version = "0.4.0"}
try_from = "0.3.2"
queue = "0.3.1"

[build-dependencies]
winapi-tlb-bindgen = { git = "https://github.com/Arnavion/winapi-tlb-bindgen" }
